--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,19 +6,21 @@
 
 .Wrapper{
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .Data {
   display: flex;
-  justify-content: space-around;
-  width: 58%;
-  flex-wrap: wrap;
-  column-gap: 20px;
+  justify-content: space-between;
+}
+
+.CostWrapper{
+  display: flex;
+  justify-content: space-between;
 }
 
 .Coster{
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 48%;
 }
