--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,26 +1,29 @@
 .App {
-  max-width: 1440px;
+  max-width: 1320px;
   padding: 30px;
   margin: auto;
 }
 
 .Wrapper{
   display: flex;
-  flex-direction: column;
-}
-
-.Data {
-  display: flex;
   justify-content: space-between;
 }
 
-.CostWrapper{
+.Data {
+  width: 40%;
   display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
+
+.CostWrapper{
+  width: 55%;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .Coster{
   display: flex;
   flex-direction: column;
-  width: 48%;
 }
